--- a/headers.security.Frontend/WebApp/package.json
+++ b/headers.security.Frontend/WebApp/package.json
@@ -26,6 +26,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.26.13",
+    "@tanstack/router-vite-plugin": "^1.26.14",
     "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
