Ensure TanStack Router devtools are only loaded in development

--- a/headers.security.Api/Frontend/package.json
+++ b/headers.security.Api/Frontend/package.json
@@ -29,6 +29,7 @@
     "@tanstack/router-devtools": "^1.26.13",
     "@tanstack/router-vite-plugin": "^1.26.14",
     "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.5",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
