Ensure appsettings are not added to repo unless necessary

--- a/headers.security.Api/appsettings.Production.json
+++ b/headers.security.Api/appsettings.Production.json
@@ -8,7 +8,7 @@
     }
   },
   "WorkerOptions": {
-    "IPv6Enabled": true,
+    "IPv6Enabled": false,
     "AllowInternalTargets": false,
     "MaxHttpRequestDepth": 10
   }
