--- a/headers.security.Api/appsettings.json
+++ b/headers.security.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WorkerOptions": {
+    "IPv6Enabled": true,
+    "AllowInternalTargets": true,
+    "MaxHttpRequestDepth": 40
+  }
 }
