--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -3,12 +3,27 @@ updates:
   - package-ecosystem: "nuget"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: "weekly"
+    open-pull-requests-limit: 1
+    groups:
+      all_nuget:
+        patterns:
+          - "*"
   - package-ecosystem: "npm"
     directory: "/headers.security.Api/Frontend"
     schedule:
-      interval: weekly
+      interval: "weekly"
+    open-pull-requests-limit: 1
+    groups:
+      all_npm:
+        patterns:
+          - "*"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: weekly
+      interval: "weekly"
+    open-pull-requests-limit: 1
+    groups:
+      all_gh_actions:
+        patterns:
+          - "*"
