--- a/headers.security.Api/headers.security.Api.csproj
+++ b/headers.security.Api/headers.security.Api.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\headers.security.CachedContent\headers.security.CachedContent.csproj" />
     <ProjectReference Include="..\headers.security.Common\headers.security.Common.csproj" />
     <ProjectReference Include="..\headers.security.Scanner\headers.security.Scanner.csproj" />
   </ItemGroup>
