--- a/headers.security.Api/Frontend/package.json
+++ b/headers.security.Api/Frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@fontsource/roboto-mono": "^5.0.18",
     "@fontsource/roboto-slab": "^5.0.20",
+    "@icons-pack/react-simple-icons": "^9.4.1",
     "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.32",
     "@tanstack/react-router": "^1.29.2",
