--- a/headers.security.Api/headers.security.Api.csproj
+++ b/headers.security.Api/headers.security.Api.csproj
@@ -13,6 +13,8 @@
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>12</LangVersion>
+    <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
