--- a/headers.security.CommandLine/headers.security.CommandLine.csproj
+++ b/headers.security.CommandLine/headers.security.CommandLine.csproj
@@ -5,13 +5,16 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
     <PublishAot>true</PublishAot>
+    <SelfContained>true</SelfContained>
     <Company>Omegapoint</Company>
     <Product>Security Header Scanner</Product>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
