--- a/headers.security.Api/Frontend/package.json
+++ b/headers.security.Api/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "headers.security frontend",
+  "name": "headers.security.frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,41 +10,46 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.13",
-    "@fontsource/roboto-mono": "^5.0.18",
-    "@fontsource/roboto-slab": "^5.0.20",
-    "@icons-pack/react-simple-icons": "^9.6.0",
-    "@mui/icons-material": "^5.15.20",
-    "@mui/joy": "^5.0.0-beta.36",
-    "@tanstack/react-router": "^1.40.0",
-    "@tanstack/react-store": "^0.5.2",
-    "axios": "^1.7.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@fontsource/roboto-mono": "^5.2.5",
+    "@fontsource/roboto-slab": "^5.2.5",
+    "@icons-pack/react-simple-icons": "9.6.1",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@tanstack/react-router": "^1.119.0",
+    "@tanstack/react-store": "^0.7.0",
+    "axios": "^1.9.0",
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zod": "^3.23.8"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "zod": "^3.24.3"
+  },
+  "overrides": {
+    "@icons-pack/react-simple-icons": {
+      "react": "latest"
+    }
   },
   "devDependencies": {
-    "@tanstack/router-devtools": "^1.40.0",
-    "@tanstack/router-vite-plugin": "^1.39.13",
-    "@types/lodash": "^4.17.5",
-    "@types/node": "^20.14.9",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "prettier": "^3.3.2",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.1",
-    "vite-plugin-mkcert": "^1.17.5"
+    "@tanstack/react-router-devtools": "^1.119.1",
+    "@tanstack/router-vite-plugin": "^1.119.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.4",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
