--- a/headers.security.Api/Frontend/package.json
+++ b/headers.security.Api/Frontend/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto-mono": "^5.2.5",
     "@fontsource/roboto-slab": "^5.2.5",
     "@icons-pack/react-simple-icons": "9.6.1",
+    "@mui/material": "^7.1.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/joy": "^5.0.0-beta.52",
     "@tanstack/react-router": "^1.120.5",
