Read app referrer from configuration instead of constant

--- a/headers.security.Api/appsettings.Production.json
+++ b/headers.security.Api/appsettings.Production.json
@@ -12,5 +12,8 @@
     "IPv6Enabled": false,
     "AllowInternalTargets": false,
     "MaxHttpRequestDepth": 10
+  },
+  "HttpClientOptions": {
+    "Referrer": "https://headers.omegapoint.app"
   }
 }
