--- a/headers.security.CommandLine/headers.security.CommandLine.csproj
+++ b/headers.security.CommandLine/headers.security.CommandLine.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>disable</Nullable>
@@ -13,23 +12,18 @@
     <OutputType>Exe</OutputType>
     <LangVersion>default</LangVersion>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" />
+    <PackageReference Include="System.CommandLine" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\headers.security.CachedContent\headers.security.CachedContent.csproj" />
     <ProjectReference Include="..\headers.security.Scanner\headers.security.Scanner.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-
   <ItemGroup>
     <None Remove="Properties\launchSettings.json" />
   </ItemGroup>
-
 </Project>
